test/extension_test_cases/invalid/dynamic/dynamicsimple.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  a = 1 ;
  println a ;
  b = 2 ;
  println a + b ;
  c = "ceee" ;
  d = 'd' ;
  println c ;
  println d ;
  println c[0] == (d + 1) ;
  exit 0
end
